--- a/public/styles.css
+++ b/public/styles.css
@@ -51,3 +51,17 @@ th, td {
     padding: 10px;
     text-align: left;
 }
+
+tbody tr:hover {
+    background-color: #f2f2f2;
+    cursor: pointer;
+}
+
+#map {
+    width: 100%;
+    height: 500px;
+    margin-top: 20px;
+    border: 3px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.75);
+}
