--- a/views/index.html
+++ b/views/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Earthquake Visualiser</title>
+  <script src="public/map.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="public/styles.css">
 </head>
@@ -11,10 +12,10 @@
   <form action="/earthquakes/fetch" method="POST">
     <label for="range">Select Time Range:</label>
     <select name="range" id="range" required>
-      <option value="hour">Past 1 Hour</option>
-      <option value="day">Past 1 Day</option>
-      <option value="week">Past 7 Days</option>
-      <option value="month">Past 1 Month</option>
+      <option value="hour">Past Hour</option>
+      <option value="day">Past Day</option>
+      <option value="week">Past Week</option>
+      <option value="month">Past Month</option>
     </select>
     <button type="submit">Fetch Earthquakes</button>
   </form>
@@ -24,17 +25,17 @@
   <button onclick="loadEarthquakes()">Load Earthquakes</button>
   <table id="earthquakeTable">
     <thead>
-      <tr>
+        <tr>
         <th>Magnitude</th>
         <th>Place</th>
         <th>Time</th>
         <th>Latitude</th>
         <th>Longitude</th>
-      </tr>
+        </tr>
     </thead>
     <tbody></tbody>
-  </table>
-
+   </table>
+   <div id="mapcontainer" style="position:relative"> </div>
   <script>
     async function loadEarthquakes() {
       const res = await fetch('/earthquakes/all');
@@ -42,16 +43,26 @@
       const tbody = document.querySelector('#earthquakeTable tbody');
       tbody.innerHTML = '';
       data.forEach(eq => {
-        tbody.innerHTML += `
-          <tr>
-            <td>${eq.mag}</td>
-            <td>${eq.place}</td>
-            <td>${eq.time}</td>
-            <td>${eq.latitude}</td>
-            <td>${eq.longitude}</td>
-          </tr>`;
+        const row = document.createElement('tr');
+        row.id = eq.id;
+        row.innerHTML = `
+          <td>${eq.mag}</td>
+          <td>${eq.place}</td>
+          <td>${eq.time}</td>
+          <td>${eq.latitude}</td>
+          <td>${eq.longitude}</td>`;
+        tbody.appendChild(row);
+        row.addEventListener('click', () => {
+            focusEarthquake(eq);
+        });
       });
+      loadEarthquakeMarkers(data);
     }
+  </script>
+  <script>
+    (g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})
+    ({key: "AIzaSyDWDTIkSKgXe_F-oBe_WZ1QQvRs2Vm7kdo", v: "beta",});
+    initMap()
   </script>
 </body>
 </html>
